test/libsolidity/syntaxTests/constructor/returns_in_constructor_new.sol
contract test {
	constructor() public returns (uint a) { }
}
// ----
// TypeError: (46-54): Non-empty "returns" directive for constructor.
